ENHANCEMENT: created styling for search field and search results - styled mobile site header - fixed issue with navigation overflowing when too many <li>

--- a/css/Form.css
+++ b/css/Form.css
@@ -16,8 +16,10 @@ form .bad {background-color:#f9d0d0; border-color:#be0000;}
 div.field{width:100%; float:left; margin-bottom:20px;}
 .ui-widget{font-family:Arial, Helvetica, sans-serif;}
 form label.left {float:left; width:25%; padding-right:5%; margin-top:3px; display:block; font-size:13px;}
-form .middleColumn {float:right; width:70% !important;}
-form .middleColumn .middleColumn{width:100% !important;}
+.main form .middleColumn {float:right; width:70% !important;}
+.main form .middleColumn .middleColumn{width:100% !important;}
+.header form .middleColumn {float:none; width:100% !important;}
+
 .listbox option{padding:3px 0;}
 form input.text, form textarea, form .textajaxuniquetext, form select{width:98%; padding:6px 1%; font-size:15px;}
 form input.sitetreeurlsegment{width:200px;}
@@ -32,7 +34,8 @@ form .checkboxset li, form .optionset li{margin-bottom:5px;}
 
 
 @media only screen and (max-width: 700px) {
-form .middleColumn {float:right; width:100% !important;;}
+.main form .middleColumn {float:right; width:100% !important;;}
+.header form .middleColumn {float:none; width:100% !important;;}
 form label.left, #MemberLoginForm_LoginForm label{margin-bottom:8px;}
 }
 
