--- a/css/typography.css
+++ b/css/typography.css
@@ -1,4 +1,4 @@
-/* Generated by Font Squirrel (http://www.fontsquirrel.com) on March 26, 2012 09:18:54 AM America/New_York */
+/* Generated by Font Squirrel (http://www.fontsquirrel.com) on February 20, 2012 06:04:25 AM America/New_York */
 @font-face {
     font-family: 'CamboRegular';
     src: url('../webfonts/Cambo-Regular-webfont.eot');
@@ -9,6 +9,17 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face{ 
+  font-family: 'WebSymbolsRegular';
+  src: url('../webfonts/websymbols-regular-webfont.eot');
+  src: url('../webfonts/websymbols-regular-webfont.eot?#iefix') format('embedded-opentype'),
+       url('../webfonts/websymbols-regular-webfont.woff') format('woff'),
+       url('../webfonts/websymbols-regular-webfont.ttf') format('truetype'),
+       url('../webfonts/websymbols-regular-webfont.svg#WebSymbolsRegular') format('svg');
+       font-weight: normal;
+       font-style: normal;
+  }
 
 body {font-size:13px; font-family:Arial, Helvetica, sans-serif;}
 h1, h2,h3,h4,h5,h6 {font-family:"CamboRegular", Georgia, "Times New Roman", Times, serif; font-weight:normal; color:#b80000;}
